# mujoco-truss-gen

./: .gitignore  GPU_optimization.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: development.md  environments.md  gnn-utilities.md  model-generation.md  releasing.md  roadmap.md  stl-import.md
examples/: custom_truss.py
experiments/: benchmark_mjx_env.py  inequality_params.py  train_inequality_baseline.py
experiments/system_id/: interactive_octahedron_position_control.py
src/: generate_mujoco_model.py
src/mujoco-truss-gen/: generate_mujoco_model.py
src/mujoco_truss_gen/: __init__.py  base_env.py  generate_mujoco_model.py  mjx_controllers.py  mjx_env.py  node_velocity_command_env.py  numerical.py  relative_observation_env.py  velocity_command_env.py
src/mujoco_truss_gen/mesh_import/: __init__.py  stl.py
src/mujoco_truss_gen/mujoco_model/: __init__.py  bodies.py  builders.py  constants.py  constraints.py  control_graph.py  controllers.py  geometry.py  gnn_utilities.py  io_viewer.py  model.py  model_types.py  presets.py  sensors.py  tendons.py
tests/: test_connector_rod_scaling.py  test_envs.py  test_inequality_params.py  test_mesh_import.py  test_mjx_controllers.py  test_mjx_conversion.py  test_mjx_env.py
