[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mujoco-truss-gen"
version = "0.9.0a"
description = "Tools for generating MuJoCo models and Gym-style environments for isoperimetric truss robots."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Isaac Sudweeks", email = "isuds@byu.edu" },
]
maintainers = [
    { name = "Isaac Sudweeks", email = "isuds@byu.edu" },
]
dependencies = [
    "gymnasium>=0.29",
    "mujoco==3.8.1",
    "mujoco-mjx==3.8.1",
    "numpy>=1.24",
    "scipy>=1.10",
]
keywords = [
    "mujoco",
    "robotics",
    "truss",
    "simulation",
    "gymnasium",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/isaa-sudweeks/mujoco-truss-gen"
Repository = "https://github.com/isaa-sudweeks/mujoco-truss-gen"
Issues = "https://github.com/isaa-sudweeks/mujoco-truss-gen/issues"

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "mypy>=1.8",
    "pytest>=8.0",
    "ruff>=0.4",
    "twine>=5.0",
]
test = [
    "pytest>=8.0",
]
mesh = [
    "matplotlib>=3.7",
    "trimesh>=4",
]

[project.scripts]
mujoco-truss-gen = "mujoco_truss_gen.generate_mujoco_model:main"

[tool.setuptools]
package-dir = { "" = "src" }
packages = [
    "mujoco_truss_gen",
    "mujoco_truss_gen.mesh_import",
    "mujoco_truss_gen.mujoco_model",
]
py-modules = ["generate_mujoco_model"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "--strict-config",
    "--strict-markers",
]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "B",
    "E",
    "F",
    "I",
    "UP",
    "W",
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
